# infinity-stumps

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md
docs/: about.md  airtime-budget.md  architecture.md  bom.md  findings.md  mcu-tradeoff.md  phase1-2-test-plan.md  prior-art.md  spec-v0.2.md  status-2026-05-13.md
firmware/: README.md
firmware/ranging-test/: CMakeLists.txt  README.md  prj.conf
firmware/ranging-test/boards/: decawave_dwm3001cdk_nrf52833.overlay
firmware/ranging-test/src/: main.c
hardware/: README.md
hardware/anchor-board/: .gitignore  README.md  anchor_board.kicad_pro  anchor_board.kicad_sch  anchor_board.kicad_sym  fp-lib-table  sym-lib-table
hardware/anchor-board/anchor_board.pretty/: .gitkeep  DWM3001C.kicad_mod  SW_Alps_SKHHAL.kicad_mod  X2SON-4_1x1mm_P0.5mm.kicad_mod
hardware/anchor-board/tools/: gen_dwm3001c_symbol.py  gen_schematic.py
sims/: 01_precision_map.py  02_anchor_comparison.py  03_trajectory_recovery.py  05_multipath_occlusion.py  05b_occlusion_mitigations.py  06_imu_fusion.py  07_sync_budget.py  11_ground_multipath.py  run_all.py  sim_ekf.py  sim_lbw.py  sim_ml.py  sim_realistic.py  upside_sweep.py
simulation/: Makefile  README.md
simulation/sims/: 01_precision_map.py  02_anchor_comparison.py  03_trajectory_recovery.py  05_multipath_occlusion.py  05b_occlusion_mitigations.py  06_imu_fusion.py  07_sync_budget.py  11_ground_multipath.py  run_all.py  sim_lbw.py  sim_ml.py  sim_realistic.py  upside_sweep.py
simulation/src/infinity_stumps/: __init__.py  lbw.py  physics.py  skeleton.py  solver.py
simulation/tests/: conftest.py  test_geometry.py  test_physics.py  test_solver.py
src/cricket_uwb/: __init__.py  ekf.py  geometry.py  lbw.py  noise.py  physics.py  plotting.py  skeleton.py  solver.py
src/infinity_stumps/: ekf.py  geometry.py  noise.py  plotting.py
tests/: test_core.py  test_ekf.py  test_lbw.py  test_noise.py
